# river

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  debug.natvis
cadc/: file_format.json
debug_util/: CMakeLists.txt  debug_util.cpp  debug_util.h
src/: CMakeLists.txt
src/include/: river.h  rmath.h
src/src/: dcel.h  decl.cpp  math.h  path.cpp  processor.cpp  processor.h  river.cpp  rmath.cpp  rmath.h  scan_line.cpp  scan_line.h  segment.cpp  segment.h  util.cpp  util.h  vatti.cpp  vatti.h
src/test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  central_widget.cpp  central_widget.h  http_server.cpp  http_server.h  main.cpp  main_window.cpp  main_window.h  qtview.cpp  qtview.h  web_server.cpp  web_server.h
